// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`help message from global command with --help 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  Options:
    --help     Show help                                                 [boolean]
    --version  Show version number                                       [boolean]



"
`;

exports[`help message from global command without arguments 1`] = `
"
error: null
signal: null
status: 1
stderr: |+

  nested-wrkspc <cmd> [args]

  Commands:
    nested-wrkspc version-management <cmd>    Manage internal package versions
    [args]                                                       [aliases: verman]

  Options:
    --version  Show version number                                       [boolean]
    --help     Show help                                                 [boolean]

  Not enough non-option arguments: got 0, need at least 1

stdout: ((EMPTY))

"
`;

exports[`help message from version-management as verman 1`] = `
"
error: null
signal: null
status: 1
stderr: |+

  nested-wrkspc version-management <cmd> [args]

  Manage internal package versions

  Commands:
    nested-wrkspc verman mismatches           Manage mismatched internal
    <directory>                               dependency versions

  Options:
    --version  Show version number                                       [boolean]
    --help     Show help                                                 [boolean]

  Not enough non-option arguments: got 0, need at least 1

stdout: ((EMPTY))

"
`;

exports[`help message from version-management as version-management 1`] = `
"
error: null
signal: null
status: 1
stderr: |+

  nested-wrkspc version-management <cmd> [args]

  Manage internal package versions

  Commands:
    nested-wrkspc version-management          Manage mismatched internal
    mismatches <directory>                    dependency versions

  Options:
    --version  Show version number                                       [boolean]
    --help     Show help                                                 [boolean]

  Not enough non-option arguments: got 0, need at least 1

stdout: ((EMPTY))

"
`;

exports[`help message from version-management/mismatches 1`] = `
"
error: null
signal: null
status: 1
stderr: |+

  nested-wrkspc version-management mismatches <directory>

  Manage mismatched internal dependency versions

  Positionals:
    directory  Directory of monorepo                           [string] [required]

  Options:
    --version               Show version number                          [boolean]
    --help                  Show help                                    [boolean]
    --update, -u            Automatically update dependency versions to match
                            their source                [boolean] [default: false]
    --checker, -c           Checker to be used
     [string] [choices: \\"ANY\\", \\"EQUAL\\", \\"TILDA_EQUAL\\", \\"CARET_EQUAL\\", \\"EQUAL_MIN\\",
                   \\"TILDA_MIN\\", \\"CARET_MIN\\", \\"EQUAL_OR_ANY\\", \\"TILDA_EQUAL_OR_ANY\\",
                     \\"CARET_EQUAL_OR_ANY\\", \\"EQUAL_MIN_OR_ANY\\", \\"TILDA_MIN_OR_ANY\\",
                         \\"CARET_MIN_OR_ANY\\", \\"ANY_OR_EQUAL\\", \\"ANY_OR_TILDA_EQUAL\\",
                     \\"ANY_OR_CARET_EQUAL\\", \\"ANY_OR_EQUAL_MIN\\", \\"ANY_OR_TILDA_MIN\\",
                               \\"ANY_OR_CARET_MIN\\"] [default: \\"CARET_EQUAL_OR_ANY\\"]
    --jsonOutput, --json    Output json instead of readdable text
                                                        [boolean] [default: false]
    --jsonOutputIndent      JSON output indentation if --jsonOutput is enabled
                                                             [number] [default: 2]
    --noExitStatus          Do not exit with code 1 when there are outdated
                            dependencies                [boolean] [default: false]
    --noPrint, --quiet, -q  Do not print mismatches to stdout
                                                        [boolean] [default: false]

  Not enough non-option arguments: got 0, need at least 1

stdout: ((EMPTY))

"
`;
